# go-ddd-sample

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  deps.bzl  go.mod
proto/: BUILD.bazel  project.proto
protos/: BUILD.bazel  environment.proto  project.proto
src/: BUILD.bazel
