load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "dddsample_proto",
    srcs = ["project.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "dddsample_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/guodongq/go-ddd-sample/proto",
    proto = ":dddsample_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "proto",
    embed = [":dddsample_go_proto"],
    importpath = "github.com/guodongq/go-ddd-sample/proto",
    visibility = ["//visibility:public"],
)
